[package]
name = "miniactor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Small, simple actor library for Rust"
readme = "README.md"
repository = "github.com/mikeulicny/miniactor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "sync"] }

